--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ngrx/effects": "15.4.0",
     "@ngrx/store": "^15.4.0",
     "@ngrx/store-devtools": "15.4.0",
+    "json-server": "^0.17.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
