--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
     "@ngrx/effects": "15.4.0",
     "@ngrx/store": "^15.4.0",
     "@ngrx/store-devtools": "15.4.0",
+    "autoprefixer": "^10.4.14",
     "json-server": "^0.17.3",
+    "nanoit-angular-modules": "^1.0.4",
+    "postcss": "^8.4.21",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^3.2.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
